--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "author": "wahllyWest",
   "license": "MIT",
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.5",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.4",
+    "handlebars": "^4.7.7",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.30.0"
